--- a/capstone_project/nyc_trip_duration.ipynb
+++ b/capstone_project/nyc_trip_duration.ipynb
@@ -701,7 +701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The statistics summary shows that the maximum distance of a trip was 700+ miles which is really questionable. Let's first add the trip duration in hours and then plot duration vs distance. As well, the trip duration in hours seems to be almost 1000 hours. Let's create a table of how the trip_duration_huors is distributed."
+    "The statistics summary shows that the maximum distance of a trip was 700+ miles which is really questionable. As well, the trip duration in hours seems to be almost 1000 hours. Let's create a table of how the trip_duration_hours is distributed."
    ]
   },
   {
@@ -804,7 +804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some anomalies are arise with a quick glance at the graph. It is not possible to have a taxi trip of more than 100 miles in less than one hour and also a trip that lasts more than 500 hours for less than 50 miles. Since we have a large dataset, removing these points will not make an impact. Let's assume the points are errors in the data and create a graph excluding the points. "
+    "Some anomalies arise with a quick glance at the graph. It is not possible to have a taxi trip of more than 100 miles in less than one hour and also a trip that lasts more than 500 hours for less than 50 miles. Since we have a large dataset, removing these points will not make an impact. Let's assume the points are errors in the data and create a graph excluding the points. "
    ]
   },
   {
@@ -1048,7 +1048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
