--- a/capstone_project/Modeling.ipynb
+++ b/capstone_project/Modeling.ipynb
@@ -208,7 +208,7 @@
      "text": [
       "R^2: 0.8954384072188829\n",
       "Root Mean Squared Error: 1033.1670044712448\n",
-      "Best Parameters: {'lr__copy_X': False, 'lr__fit_intercept': True, 'lr__normalize': True}\n",
+      "Best Parameters: {'lr__copy_X': True, 'lr__fit_intercept': True, 'lr__normalize': True}\n",
       "Best score is 0.9443147193143128\n"
      ]
     }
