--- a/capstone_project/tuning_xgboost.ipynb
+++ b/capstone_project/tuning_xgboost.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tunning XGBoost\n",
+    "# Tuning XGBoost\n",
     "***\n",
     "In this notebook, let's build a gradient boosting regression to predict a NYC taxi trip duration given the **cleaned data** of taxi trips from 2016. The original data can be found in [kaggle's competition](https://www.kaggle.com/c/nyc-taxi-trip-duration/data). The data wrangling, exploratory data analysis and data cleaning can be found in [this](https://github.com/emmpew/datascience/blob/master/capstone_project/nyc_trip_duration.ipynb) notebook."
    ]
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hyperparameter_tunning(params):\n",
+    "def hyperparameter_tuning(params):\n",
     "    xgboost_cv = GridSearchCV(XGBRegressor(),params, cv=5,verbose=3)\n",
     "    %time xgboost_cv.fit(X_train,y_train)\n",
     "    \n",
@@ -223,7 +223,7 @@
    "source": [
     "params = {'n_estimators': [10,30,50]}\n",
     "\n",
-    "hyperparameter_tunning(params)"
+    "hyperparameter_tuning(params)"
    ]
   },
   {
@@ -338,7 +338,7 @@
     "params = {'max_depth': [2,5,8],\n",
     "          'n_estimators': [50]}\n",
     "\n",
-    "hyperparameter_tunning(params)"
+    "hyperparameter_tuning(params)"
    ]
   },
   {
@@ -452,7 +452,7 @@
     "          'max_depth': [8],\n",
     "          'n_estimators': [50]}\n",
     "\n",
-    "hyperparameter_tunning(params)"
+    "hyperparameter_tuning(params)"
    ]
   },
   {
@@ -567,7 +567,7 @@
     "          'max_depth': [8],\n",
     "          'n_estimators': [50]}\n",
     "\n",
-    "hyperparameter_tunning(params)"
+    "hyperparameter_tuning(params)"
    ]
   },
   {
@@ -682,7 +682,7 @@
     "          'max_depth': [8],\n",
     "          'n_estimators': [50]}\n",
     "\n",
-    "hyperparameter_tunning(params)"
+    "hyperparameter_tuning(params)"
    ]
   },
   {
